--- a/package.json
+++ b/package.json
@@ -2,18 +2,12 @@
 	"dependencies": {
 		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
-		"crypto-js": "^4.1.1",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"express-mongo-sanitize": "^2.2.0",
 		"fs-extra": "^11.1.0",
 		"jsonwebtoken": "^9.0.0",
-		"mongoose": "^6.10.3",
-		"mongoose-error": "^1.0.1",
-		"mongoose-unique-validator": "^3.1.0",
-		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
-		"password-validator": "^5.3.0"
+		"sqlite3": "^5.1.7"
 	},
 	"scripts": {
 		"start": "nodemon server.js"
