--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"fs-extra": "^11.1.0",
+		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.0",
 		"multer": "^1.4.5-lts.1",
 		"sqlite3": "^5.1.7"
