--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"scripts": {
 		"start": "nodemon server.js",
-		"test": "jest"
+		"test": "cross-env NODE_OPTIONS='--experimental-vm-modules' npx jest"
 	},
 	"name": "rest-api-nodejs",
 	"version": "1.0.1",
@@ -27,6 +27,10 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
+		"@babel/core": "^7.25.8",
+		"@babel/preset-env": "^7.25.8",
+		"babel-jest": "^29.7.0",
+		"cross-env": "^7.0.3",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.0",
 		"supertest": "^7.0.0"
